Docs: Arrumando o nome dos sprint backlogs